infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation 
    spec:
      containers:
        - name: moderation
          image: olegs777/moderation:latest
---
# CREATE Cluster IP server for moderation pod
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-srv
spec:
  selector: 
    app: moderation
  type: ClusterIP 
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
